--- a/res/css/views/dialogs/_DevtoolsDialog.pcss
+++ b/res/css/views/dialogs/_DevtoolsDialog.pcss
@@ -69,6 +69,9 @@ Please see LICENSE files in the repository root for full details.
 }
 
 .mx_DevTools_textarea {
+    > textarea {
+        font-family: $monospace-font-family;
+    }
     font-size: $font-12px;
     max-width: 684px;
     min-height: 250px;
