Add vertical-align for custom emoji

--- a/res/css/views/rooms/_EventTile.pcss
+++ b/res/css/views/rooms/_EventTile.pcss
@@ -899,6 +899,10 @@ $left-gutter: 64px;
         /* Override the default colors of the 'github-markdown-css' library
         (#fff for light theme, #000 for dark theme) to match the inherited theme */
         background-color: inherit !important;
+
+        &[data-mx-emoticon] {
+            vertical-align: middle;
+        }
     }
 
     .mx_EventTile_clamp & {
